k8s/apps/k8s-deployments.yaml
 
apiVersion: v1
kind: Service
metadata:
  name: django-k8s-web-service
spec:
  type: ClusterIP
  selector:
    app: django-k8s-web-deployment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-k8s-web-deployment
  labels:
    app: django-k8s-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-k8s-web-deployment
  template:
    metadata:
      labels:
        app: django-k8s-web-deployment
    spec:
      containers:
      - name: django-k8s
        image: devilhost069/djk8s-pipeline:v6
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "600m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: django-persistent-storage
          mountPath: /djk8s
      imagePullSecrets:
        - name: django-k8s
      
      volumes:
      - name: django-persistent-storage
        persistentVolumeClaim:
          claimName: djk8s-claim
