k8s/apps/djk8s-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: djk8s-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-staging"
# spec:
#   tls:
#   - hosts:
#     - djlab.oursmarketplace.com
#     secretName: djk8s-tls
#   rules:
#   - host: djlab.oursmarketplace.com
#     http:
#       paths:
#       - backend:
#           serviceName: django-k8s-web-service
#           servicePort: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "djlab.oursmarketplace.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-k8s-web-service
            port:
              number: 80
